Social Warfare z-index fix.

--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -66,7 +66,7 @@
     }
 
     & * {
-      z-index: 98;
+      z-index: 9;
     }
 
     .tt-header--section span {
