--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -25,7 +25,7 @@
   }
 
   & * {
-    z-index: 98;
+    z-index: 9;
   }
 
   .tt-social,
