--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -460,7 +460,7 @@ a {
   }
 
   & * {
-    z-index: 98;
+    z-index: 9;
   }
 
   p {
