--- a/scss/_legal.scss
+++ b/scss/_legal.scss
@@ -19,7 +19,7 @@
   }
 
   & * {
-    z-index: 98;
+    z-index: 9;
   }
 }
 
