--- a/scss/_series.scss
+++ b/scss/_series.scss
@@ -79,7 +79,7 @@
   }
 
     & * {
-      z-index: 98;
+      z-index: 9;
     }
 
   .tt-search-form {
